[package]
name = "eris-staking-hub-kujira"
version = "1.2.2"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-kujira"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "1.1.3", features = ["staking"] }
cw2 = "0.13.2"
cw20 = "0.13.2"
cw-storage-plus = "0.13.2"
eris = { path = "../../packages/eris" }
kujira = "0.7.13"

[dev-dependencies]
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-schema = "1.1.3"
