[package]
name = "router"
version = "0.1.0"
authors = ["Terraform Labs, PTE.", "DELIGHT LABS", "Eris Protocol"]
edition = "2018"
description = "A router contract - provides multi-step operations to facilitate single sign operation"
license = "Apache-2.0"
repository = "https://github.com/erisprotocol/contracts-kujira"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.13.2" } 
cosmwasm-std = { version = "1.0.0" }
eris = { path = "../../packages/eris" }
cw-storage-plus = { version = "0.13.2"}
integer-sqrt = "0.1.5"
schemars = "0.8.10"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw2 = { version = "0.13.4" } 
kujira = "0.7.13"

[dev-dependencies]
cosmwasm-storage = { version = "1.0.0" }
cosmwasm-schema = { version = "1.0.0" }
